<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    tools:context=".ui.view.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:paddingVertical="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/iv_location"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/markir_logo_desc"
                android:src="@drawable/markir_logo" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/group_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="14dp"
                android:text="@string/welcome_text_tittle"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:text="@string/welcome_text_description"
                android:textAlignment="center" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="72dp"
            android:paddingVertical="14dp"
            android:text="@string/btn_login"
            android:textStyle="bold"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconGravity="start"
            app:iconPadding="8dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
